## This is an automake file from the NetCDF Expansion Pack.

# Ed Hartnett, 9/28/25
# Copyright Intelligent Data Design, Inc. All rights reserved.

# These do not get installed.
noinst_HEADERS = grib2logging.h


# These do get installed.
include_HEADERS = ncsqueeze.h

if HAVE_GRIB2
include_HEADERS += grib2dispatch.h
endif
