## This is an automake file from the NetCDF Expansion Pack.

# Ed Hartnett, 9/28/25
# Copyright Intelligent Data Design, Inc. All rights reserved.

# These do not get installed.
noinst_HEADERS = grib2logging.h


# These do get installed.
include_HEADERS = ncsqueeze.h

# GRIB2 UDF Handler - Disabled for v1.0.0 (LZ4 compression release only)
# Will be re-enabled in v2.0.0 for GRIB2 UDF support
# if HAVE_GRIB2
# include_HEADERS += grib2dispatch.h
# endif
